WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34053
[Qt] In RenderThemeQt determine the QStyle from the page client instead of the page's view
https://bugs.webkit.org/show_bug.cgi?id=34053
Summary
[Qt] In RenderThemeQt determine the QStyle from the page client instead of th...
Simon Hausmann
Reported
2010-01-24 02:12:21 PST
[Qt] In RenderThemeQt determine the QStyle from the page client instead of the page's view
Attachments
Patch
(4.24 KB, patch)
2010-01-24 02:14 PST
,
Simon Hausmann
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2010-01-24 02:14:02 PST
Created
attachment 47292
[details]
Patch
WebKit Commit Bot
Comment 2
2010-01-25 06:42:33 PST
Comment on
attachment 47292
[details]
Patch Clearing flags on attachment: 47292 Committed
r53802
: <
http://trac.webkit.org/changeset/53802
>
WebKit Commit Bot
Comment 3
2010-01-25 06:42:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug