2010-01-25  Simon Hausmann  <hausmann@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] In RenderThemeQt determine the QStyle from the page client instead of the page's view
        https://bugs.webkit.org/show_bug.cgi?id=34053

        * platform/qt/QWebPageClient.h: Add function to return the style.
        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::qStyle): Determine the style from the page client instead of the page's view.
2010-01-25  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] In RenderThemeQt determine the QStyle from the page client instead of the page's view
        https://bugs.webkit.org/show_bug.cgi?id=34053

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebViewPrivate::style): Implement QWebPageClient::style() and return the graphics
        widget's style.
        * Api/qwebpage.cpp:
        (QWebPageWidgetClient::style): Implement QWebPageClient::style() and return the widget's style.

Canonical link: https://commits.webkit.org/45201@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53802 268f45cc-cd09-0410-ab3c-d52691b4dbfc