WebKit/qt/Api/qgraphicswebview.cpp
@@ -108,6 +108,8 @@ public:
 
     virtual QObject* pluginParent() const;
 
+    virtual QStyle* style() const;
+
 #if USE(ACCELERATED_COMPOSITING)
     virtual void setRootGraphicsLayer(QGraphicsItem* layer);
     virtual void markForSync(bool scheduleSync);
@@ -289,6 +291,11 @@ QWidget* QGraphicsWebViewPrivate::ownerWidget() const
 QObject* QGraphicsWebViewPrivate::pluginParent() const
 {
     return q;
+}
+
+QStyle* QGraphicsWebViewPrivate::style() const
+{
+    return q->style();
 }
 
 /*!
